Archive2/e0/4d9ccf777564d7/output
main.cpp:4:7: error: no member named 'access' in 'N::X::Y'
    t.access();
    ~ ^
main.cpp:17:13: note: in instantiation of function template specialization 'f<N::X::Y>' requested here
            f(y);
            ^
main.cpp:4:6: error: member reference base type 'int' is not a structure or union
    t.access();
    ~^~~~~~~
main.cpp:23:5: note: in instantiation of function template specialization 'f<int>' requested here
    f(1);
    ^
2 errors generated.
